--- a/hugo/config.toml
+++ b/hugo/config.toml
@@ -1,4 +1,64 @@
 baseURL = "http://www.cbmministry.org/wed_study/"
 languageCode = "en-us"
 title = "CBM Wednesday night Bible Study"
+
+# Pagination
+paginate = 3
+paginatePath = "page"
+
+# Theme to use
 theme="hugo-bootstrap"
+summaryLength = 10
+
+[languages.en]
+  languageName = "English"
+
+  # Replace the default footer message with a localized message
+  copyright = "Hugo template made with ❤ by Xzya"
+
+  [[languages.en.menu.main]]
+    #url = "/"
+    name = "Home"
+    weight = 1
+  [[languages.en.menu.main]]
+    url = "about"
+    name = "About"
+    weight = 1
+  [[languages.en.menu.main]]
+    url = "contact"
+    name = "Contact"
+    weight = 1
+
+[permalinks]
+  post = "/:year/:month/:title/"
+
+[params]
+  # Main sections (currently used for the recent posts in the sidebar)
+  mainSections = ["post"]
+
+  # Default author
+  # author = "CBM"
+
+  # Date format (default: Jan 2, 2006)
+  # date_format = "Jan 2, 2006"
+
+  # Display post summaries instead of content in list templates (default: true)
+  # truncate = false
+
+  [params.sidebar]
+    # Whether to show the recent posts or not (default: true)
+    # showRecent = false
+
+    # Whether to show the taxonomies or not (default: true)
+    # showTaxonomy = false
+
+    # How many posts to show on the sidebar (Default: 5)
+    # num_recent_posts = 5
+
+  [params.header]
+    # Color scheme for the header (default: "light")
+    # colorScheme = "dark"
+
+  [params.footer]
+    # Color scheme for the footer (default: "light")
+    # colorScheme = "dark"
